<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Restaurant Finder</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_country">País</string>
    <string name="hint_town">Población</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_number">Nº</string>
    <string name="hint_price_per_people">Precio por persona</string>

    <string name="default_value">Cualquiera</string>
    <string-array name="array_road_type">
        <item>Cualquiera</item>
        <item>Avenida</item>
        <item>Calle</item>
        <item>Carretera</item>
        <item>Travesía</item>
    </string-array>
    <string-array name="array_coussine">
        <item>Cualquiera</item>
        <item>Americana</item>
        <item>China</item>
        <item>Española</item>
        <item>Francesa</item>
        <item>India</item>
        <item>Italiana</item>
        <item>Japonesa</item>
        <item>Mexicana</item>
    </string-array>
    <string-array name="array_food_type">
        <item>Cualquiera</item>
        <item>Creativa</item>
        <item>Tradicional</item>
    </string-array>

    <string name="title_activity_results">ResultsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="desc_searchButton">Buscar</string>
    <string name="hint_coussine">Nacionalidad</string>
    <string name="restaurant_detail_activity_label">Detalles</string>
    

</resources>
