<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >
 
    <!-- Title Of Song-->

    <TextView
        android:id="@+id/nameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_name"
        android:textColor="#040404"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans" />
 
    <!-- Artist Name -->

    <TextView
        android:id="@+id/addressResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameResult"
        android:layout_marginTop="1dip"
        android:text="@string/hint_address"
        android:textColor="#343434"
        android:textSize="12sp" />
 
    <!-- Rightend Duration -->

    <TextView
        android:id="@+id/priceResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/nameResult"
        android:layout_marginRight="5dip"
        android:gravity="right"
        android:text="@string/hint_price_per_people"
        android:textColor="#10bcc9"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coussineResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/priceResult"
        android:layout_alignBottom="@+id/priceResult"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/priceResult"
        android:text="@string/hint_coussine"
        android:textSize="12sp" />
 
</RelativeLayout>