<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_name" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@+id/countryAutoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_country" />

            <EditText
                android:id="@+id/townText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_town" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/typeRoadSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/array_road_type"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />

            <EditText
                android:id="@+id/addressText"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_address" />

            <EditText
                android:id="@+id/numberText"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_number"
                android:inputType="number" />

        </LinearLayout>

        <Spinner
            android:id="@+id/foodTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_food_type"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        <Spinner
            android:id="@+id/coussineSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_coussine"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        <EditText
            android:id="@+id/priceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_price_per_people"
            android:inputType="numberDecimal" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_search" />

    </LinearLayout>

</RelativeLayout>
